--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ subtle = "2.2.1"
 serde = { version = "1.0", features = ["derive"], optional = true }
 ec-gpu = { version = "0.2.0", optional = true }
 byte-slice-cast = "1.0.0"
+num-traits = "0.2.16"
 
 [dev-dependencies]
 rand_xorshift = "0.3.0"
